--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-saas-marketing",
+  "name": "gatsby-starter-cv-page",
   "private": true,
-  "description": "A simple one page marketing starter for saas companies",
+  "description": "A simple one page",
   "version": "0.1.0",
-  "author": "Keegan Burkett <keegan.t.marciniak@gmail.com>",
+  "author": "Raphael Dias",
   "dependencies": {
     "gatsby": "^2.15.31",
     "gatsby-image": "^2.2.24",
@@ -26,6 +26,7 @@
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "prettier": "^1.18.2"
   },
   "keywords": [
@@ -38,6 +39,7 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "repository": {
